# happy

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.server
.github/workflows/: build-unsigned-ipa.yml  build-workspace-image.yml
deploy/voice/: .env.example  .gitignore  docker-compose.yml  livekit-helm-values.yaml  livekit.yaml
deploy/voice/agent/: .env.example  Dockerfile  pyproject.toml  voice_agent.py  voice_agent_prompt.py
deploy/workspace-image/: Dockerfile
docs/: permission-resolution.md  self-hosted-voice.md
scripts/: build-happy-cli-deploy.sh
